2011-12-10  Kaz Kylheku  <kaz@kylheku.com>

	* mpi-patches/add-mp-hash: Rewrote mp_hash to only hash enough
	low-order bit material from the bignum to fill an unsigned long.
	We don't need to walk the entire bignum. If the low order
	digit of the bignum is at least as large as an unsigned long,
	we just take that as the hash, otherwise we take enough of the
	digits to fill an unsigned long. For negative numbers, we just
	invert the bits of the hash.

	* mpi-patches/add-mpi-toradix-with-case: Refreshed.

	* mpi-patches/fix-mult-bug: Refreshed.

2011-12-10  Kaz Kylheku  <kaz@kylheku.com>

	* lib.c (mulv): Recognize cases to eliminate a wasteful mul call
	with an initial element of 1.

2011-12-10  Kaz Kylheku  <kaz@kylheku.com>

	* lib.c (plusv): Recognize cases to eliminate a wasteful plus call
	with an initial element of zero.

2011-12-10  Kaz Kylheku  <kaz@kylheku.com>

	* arith.c: File is now generated using TXR.
	(NOOP): New macro.
	(plus): Use NOOP macro.
	(minus, neg): Function moved here from lib.c and rewritten
	for bignum support.

	* lib.c (minus, neg): Functions removed.

	* arith.txr: New file.

2011-12-09  Kaz Kylheku  <kaz@kylheku.com>

	* configure: Fix patching without quilt.

2011-12-09  Kaz Kylheku  <kaz@kylheku.com>

	Build and pass test suite on Cygwin.

	* configure (longlong, ulonglong, superlong, usuperlong): Initialize
	these variables so that if the detection tests fail, the script
	does not access unbound variables.
	Avoid adding junk like .bss.* into config.h.

	* mpi-patches/config-types: Fixed wrong use of nonexistent
	SIZEOF_LONG_T.

2011-12-09  Kaz Kylheku  <kaz@kylheku.com>

	(Applies to previous commit.)

	* mpi-patches/config-types: Added missing definitions
	of MP_DIGIT_SIZE in two cases.

2011-12-09  Kaz Kylheku  <kaz@kylheku.com>

	Bignum support, here we go!

	Bignums, based on Michael Fromberger's MPI library, are integrated
	into the input syntax, stream output, equality testing, the garbage
	collector, and hashing.
	