@@ -1180,6 +1180,8 @@ void eval_init(void)
           func_n2(set_hash_userdata));
   reg_fun(intern(lit("hashp"), user_package), func_n1(hashp));
   reg_fun(intern(lit("maphash"), user_package), func_n2(maphash));
+  reg_fun(intern(lit("hash-eql"), user_package), func_n1(hash_eql));
+  reg_fun(intern(lit("hash-equal"), user_package), func_n1(hash_equal));
 
   reg_fun(intern(lit("eval"), user_package), func_n2(eval_intrinsic));
 
