@@ -4835,6 +4835,8 @@ The following are Lisp functions and variables built-in to TXR.
 
 .SS Function maphash
 
+.SS Functions hash-eql and hash-equal
+
 .SS Function eval
 
 .SS Variables *stdout*, *stdin* and *stderr*
